--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -340,7 +340,7 @@
     "        <td style=\"text-align:center;\">Chapter 1</td>\n",
     "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
     "        <td style=\"text-align:center;\">Docker, Jupyter, Git, GitHub, Python\n",
-    "                                        (variables, lists, flow control - if, for, while)</td>\n",
+    "                                        (variables, lists, flow control - if, for)</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -348,8 +348,8 @@
     "        <td style=\"text-align:center;\">More Python, NIfTI and BIDS</td>\n",
     "        <td style=\"text-align:center;\">Chapter 2.1-2.2</td>\n",
     "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
-    "        <td style=\"text-align:center;\">Python (file I/O, dictionary, data frame, arrays), \n",
-    "                                        NIfTI format </td>\n",
+    "        <td style=\"text-align:center;\">Python (dictionary, data frame, arrays), \n",
+    "                                        image data </td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -357,7 +357,7 @@
     "        <td style=\"text-align:center;\">Pre-processing</td>\n",
     "        <td style=\"text-align:center;\">Chapter 3</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
-    "        <td style=\"text-align:center;\">BIDS, Motion correction</td>\n",
+    "        <td style=\"text-align:center;\">NIfTI & BIDS, Motion correction</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -468,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
