Array section done; image section done up to reading image

--- a/HandlingData.ipynb
+++ b/HandlingData.ipynb
@@ -2783,11 +2783,241 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image data\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "Now that we know how to handle array data in Python, we can take a look at some image data. Brain image data are often saved as 3D arrays (e.g., T1-weighted structural MRI) or 4D arrays (e.g., fMRI time series). For this exercise, we will use the flanker task data you downladed earlier.\n",
+    "\n",
+    "## Reading image data\n",
+    "\n",
+    "Now let's take a look at some image data. For this exercise, we examine a subject from the `ds102` data set. I want you to select a random subject from the data set. To get a list of subjects, you can run this program. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[`<ListSubjects.py.`](https://github.com/sathayas/fMRIClassFall2019/blob/master/HandlingData/ListSubjects.py)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-01\n",
+      "sub-02\n",
+      "sub-03\n",
+      "sub-04\n",
+      "sub-05\n",
+      "sub-06\n",
+      "sub-07\n",
+      "sub-08\n",
+      "sub-09\n",
+      "sub-10\n",
+      "sub-11\n",
+      "sub-12\n",
+      "sub-13\n",
+      "sub-14\n",
+      "sub-15\n",
+      "sub-16\n",
+      "sub-17\n",
+      "sub-18\n",
+      "sub-19\n",
+      "sub-20\n",
+      "sub-21\n",
+      "sub-22\n",
+      "sub-23\n",
+      "sub-24\n",
+      "sub-25\n",
+      "sub-26\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Directory where your data set resides.\n",
+    "dataDir = '/tmp/Data/ds102'\n",
+    "\n",
+    "# getting a list of directory contents\n",
+    "dirContents = os.listdir(dataDir)\n",
+    "dirContents.sort()\n",
+    "\n",
+    "# printing out a list of subjects (i.e., directories starting with sub-)\n",
+    "for iFile in dirContents:\n",
+    "    if 'sub-' in iFile:\n",
+    "        print(iFile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From these subjects, I randomly pick a subject **`sub-26`**. Under that subject's directory, there are two directories called **`anat`** (where high-resolution structural MRI data resides) and **`func`** (where 4D fMRI data file(s) resides). For the following exercises, we will read the structural MRI data and one of fMRI time series data. For the structural MRI data, there is only one image data (with **`.nii`** extension, or a NIfTI file) in the **`anat`** directory. For the fMRI data, you can choose one of the `.nii` files randomly. In my case, under the `anat` directory:\n",
+    "```\n",
+    "sub-26_T1w.nii.gz\n",
+    "```\n",
+    "And under the `func` directory:\n",
+    "```\n",
+    "sub-26_task-flanker_run-1_bold.nii.gz\n",
+    "sub-26_task-flanker_run-2_bold.nii.gz\n",
+    "```\n",
+    "I will pick **`sub-26_task-flanker_run-2_bold.nii.gz`** for the exercise.\n",
+    "\n",
+    "Here is an example code to read structural and functional MRI data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[`<ReadImageData.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/HandlingData/ReadImageData.py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import nibabel as nib\n",
+    "\n",
+    "# Directory where your data set resides.\n",
+    "dataDir = '/tmp/Data/ds102'\n",
+    "\n",
+    "# paths for the structural and functional MRI data.\n",
+    "f_sMRI = os.path.join(dataDir,'sub-26/anat/sub-26_T1w.nii.gz')\n",
+    "f_fMRI = os.path.join(dataDir,'sub-26/func/sub-26_task-flanker_run-2_bold.nii.gz')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we are importing the **`nibabel`** library as **`nib`**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/tmp/Data/ds102/sub-26/anat/sub-26_T1w.nii.gz'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_sMRI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/tmp/Data/ds102/sub-26/func/sub-26_task-flanker_run-2_bold.nii.gz'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f_fMRI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reading in the image data arrays\n",
+    "# structural MRI\n",
+    "sMRI = nib.load(f_sMRI)\n",
+    "X_sMRI = sMRI.get_data()\n",
+    "\n",
+    "# fMRI\n",
+    "fMRI = nib.load(f_fMRI)\n",
+    "X_fMRI = fMRI.get_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function **`nib.load`** is used to create an object for the image data. To actually read the image data array, you need to use the **`get_data`** method associated with an image object. \n",
+    "\n",
+    "So, were image data loaded correctly? Let's check."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(176, 256, 256)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_sMRI.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 64, 40, 146)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_fMRI.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, the structural MRI is a 3D array of size 176 x 256 x 256, whereas the fMRI is a 4D array of size 64 x 64 x 40 x 164. "
+   ]
   }
  ],
  "metadata": {
