Just before PyBIDS section

--- a/NIfTI_BIDS.ipynb
+++ b/NIfTI_BIDS.ipynb
@@ -5,16 +5,16 @@
    "metadata": {},
    "source": [
     "<p style='text-align:center'>\n",
-    "PSY 394U <b>Methods for fMRI</b>, Fall 2018\n",
+    "PSY 394U <b>Methods for fMRI</b>, Fall 2019\n",
     "\n",
     "\n",
-    "<img style='width: 300px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2018/blob/master/Images/Placebo_Left.png?raw=true' alt='brain blobs'/>\n",
+    "<img style='width: 300px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2019/blob/master/Images/Placebo_Left.png?raw=true' alt='brain blobs'/>\n",
     "\n",
     "</p>\n",
     "\n",
     "<p style='text-align:center; font-size:40px; margin-bottom: 30px;'><b>Neuroimaging data structure</b></p>\n",
     "\n",
-    "<p style='text-align:center; font-size:18px; margin-bottom: 32px;'><b>September 24, 2018</b></p>\n",
+    "<p style='text-align:center; font-size:18px; margin-bottom: 32px;'><b>September 23, 2019</b></p>\n",
     "\n",
     "<hr style='height:5px;border:none' />"
    ]
@@ -55,14 +55,14 @@
     "\n",
     "## NIfTI header\n",
     "\n",
-    "A typical NIfTI header includes a number of fields describing information regarding the image. Let's take a look at an example from an fMRI image. I am using the same file from the previous class (`ds102` data set, subject 26). "
+    "A typical NIfTI header includes a number of fields describing information regarding the image. Let's take a look at an example from an fMRI image. I am using the same file from the previous class (the flanker data set (a.k.a., `ds102`), subject 26). "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`<ViewHeader.py>`"
+    "[`<ViewHeader.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/NIfTI_BIDS/ViewHeader.py)"
    ]
   },
   {
@@ -127,10 +127,8 @@
     "import nibabel as nib\n",
     "\n",
     "\n",
-    "# Directory where your data set resides. This needs to be customized\n",
-    "#dataDir = '/home/satoru/Teaching/fMRI_Fall_2018/Data/ds102'\n",
-    "dataDir = '/Users/sh45474/Documents/Teaching/fMRI_Fall_2018/Data/ds102'\n",
-    "\n",
+    "# Directory where your data set resides. \n",
+    "dataDir = '/tmp/Data/ds102'\n",
     "\n",
     "# reading in the fMRI data array\n",
     "f_fMRI = os.path.join(dataDir,'sub-26/func/sub-26_task-flanker_run-2_bold.nii.gz')\n",
@@ -231,204 +229,7 @@
     "Here, the first 3 elements correspond to voxel sizes in mm in x-, y-, and z-directions, respectively. The last element refers to the repetition time (TR, time between scans) in seconds.\n",
     "\n",
     "### Exercise\n",
-    "1. **Header info, T1 image**. Get the image dimension, data type, and voxel size from the T1 image of a randomly selected subject from the data set `ds102`. Post the resulting information (rather than the code) on Canvas.\n",
-    "2. **Header info, fMRI data, ds114**. Get the image dimension, data type, and voxel size from the fMRI data of a randomly selected subject from the data set `ds114`. Post the resulting information (rather than the code) on Canvas."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(176, 256, 256)\n",
-      "int16\n",
-      "(1.0, 1.0, 1.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# reading in the structural MRI header\n",
-    "f_sMRI = os.path.join(dataDir,'sub-10/anat/sub-10_T1w.nii.gz')\n",
-    "sMRI = nib.load(f_sMRI)\n",
-    "hdr_sMRI = sMRI.header\n",
-    "\n",
-    "# image dimension\n",
-    "print(hdr_sMRI.get_data_shape())\n",
-    "\n",
-    "# data type\n",
-    "print(hdr_sMRI.get_data_dtype())\n",
-    "\n",
-    "# voxel size\n",
-    "print(hdr_sMRI.get_zooms())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Another useful piece of information in the NIfTI header is the affine information. It is a 4x4 matrix that lets you transform the voxel coordinates. This is what the affine matrix looks like."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`<AffineInfo.py>`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import nibabel as nib\n",
-    "\n",
-    "\n",
-    "# Directory where your data set resides. This needs to be customized\n",
-    "dataDir = '/home/satoru/Teaching/fMRI_Fall_2018/Data/ds102'\n",
-    "\n",
-    "# reading in the T1 data array\n",
-    "f_sMRI = os.path.join(dataDir,'sub-26/anat/sub-26_T1w.nii.gz')\n",
-    "sMRI = nib.load(f_sMRI)\n",
-    "X_sMRI = sMRI.get_data()\n",
-    "\n",
-    "# affine matrix\n",
-    "print(sMRI.affine)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice that, although this information is embedded in the header, we use the **`affine`** method associated with the *image object*, not the *header*. So, why should we care about this matrix? This matrix lets you transform array indices into the voxel coordinates in the brain space. Say, you want to see where the voxel `[85, 110, 140]` is located in the brain space (in terms of mm). \n",
-    "\n",
-    "To do so, you create a vector with the desired indices, plus 1 as the fourth element."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# example voxel indices\n",
-    "xyz = np.array([[85, 110, 140]])\n",
-    "xyz1 = np.hstack([xyz,np.array([[1]])]).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xyz1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, you multiply this with the affine matrix."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# transforming array indices to brain space coordinate\n",
-    "A = sMRI.affine\n",
-    "brain_xyz = np.dot(A,xyz1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "brain_xyz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here, the first 3 elements correspond to the voxel coordinate in the brain space, in terms of mm. You can verify this with an image viewer. For example, in FSL,\n",
-    "\n",
-    "<img style='width: 650px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2018/blob/master/Images/Affine_Viewer.png?raw=true' alt='Affine viewer'/>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It is also possible to transform the voxel coordinates in the brain space (in mm) to the corresponding array indices, simply finding the inverse of the affine matrix. For example, take the coordinate `[0, 0, 0]`mm in the brain space."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# voxel coordinate in mm\n",
-    "xyzmm = np.array([[0, 0, 0]])\n",
-    "xyz1mm = np.hstack([xyzmm,np.array([[1]])]).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xyz1mm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# transforming brain space coordinate (in mm) to array indices\n",
-    "invA = np.linalg.inv(A)\n",
-    "voxel_xyz = np.dot(invA,xyz1mm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "voxel_xyz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here, we can check with an image viewer.\n",
-    "\n",
-    "<img style='width: 650px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2018/blob/master/Images/Affine_Inverse.png?raw=true' alt='Affine viewer'/>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that this image is the raw data, thus the center of the image `[0, 0, 0]`(in the brain space) is at an arbitrary location. During the preprocessing, the center is usually placed in the anterior commissure. "
+    "1. **Header info, T1 image**. Get the image dimension, data type, and voxel size from the T1 image of a randomly selected subject from the data set `ds102`. Post the resulting information (rather than the code) on Canvas."
    ]
   },
   {
@@ -474,6 +275,15 @@
    "source": [
     "# BIDS\n",
     "<hr style=\"height:1px;border:none\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data\n",
+    "\n",
+    "For this demonstration, in addition to the flanker data (`ds102`), we shall use the **test-retest data** from OpenNeuro.org. You can download [here](https://openneuro.org/datasets/ds000114/versions/1.0.1/download). I recommend creating a data directory named **`Data`** on your local computer, and under it creating a directory named **`ds114`** (i.e., `Data/ds114`). Then move the downloaded zip file to the `ds114` directory and unzip its contents. *Don't forget to mount the `Data` directory on your Docker!* \n"
    ]
   },
   {
@@ -687,78 +497,7 @@
     "    \"TaskName\": \"overt_verb_generation\"\n",
     "}\n",
     "```\n",
-    "\n",
-    "**What is a dictionary?** A dictionary is like a list. But unlike a list whose items are indexed by a number, we can refer items in a dictionary with keys. Here is an example of a dictionary."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bookInfo = {'Author':'Sweigart, Al',\n",
-    "            'Title':'Automate the Boring Stuff with Python',\n",
-    "            'Publisher':'No Starch Press',\n",
-    "            'Year': 2015,\n",
-    "            'Pages':503}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bookInfo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Each item in the dictionary consists of a **key** and a **value** separated by a colon (`:`). You can use a key to access the value of the corresponding item. For example,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bookInfo['Author']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bookInfo['Pages']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can just get keys, to see what fields are in a dictionary."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bookInfo.keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So, *why should we care about dictionaries?* Sometimes it makes sense to organize multiple properties of an object / individual as a single entity, as opposed to a collection of separate variables. JSON format is a universal format to describe dictionary-like information."
+    "\n"
    ]
   },
   {
@@ -1788,7 +1527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
