File name for code MoCor.py updated

--- a/MoCor.ipynb
+++ b/MoCor.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[`<MoCor_fsl.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/MoCor/MoCor_fsl.py)"
+    "[`<MoCor.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/MoCor/MoCor.py)"
    ]
   },
   {
