--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -116,11 +116,14 @@
     "much simpler and requiring far less resources to run than a virtual machine. Docker enables\n",
     "you to install and run a bundle of software packages and libraries known as a Docker image.\n",
     "\n",
-    "***Docker image***: Docker images called **`sathayas/python-fsl-bundle`** (~3GB) is available from the Docker Hub web site. This Docker image includes Python 3, FSL (neuroimage data analysis tool), and Python libraries necessary for scientific computing, neuroimage data processing, and machine learning.\n",
+    "***Docker images***: \n",
     "\n",
-    "  * *Installation instructions on Docker and Docker image will be covered during the first class.*\n",
+    "  * **`sathayas/python-fsl-bundle`** (~3GB): Available from the Docker Hub web site. This Docker image includes Python 3, FSL (neuroimage data analysis tool), and Python libraries necessary for scientific computing, neuroimage data processing, and machine learning.\n",
     "\n",
-    "  * *Students are expected to install all the necessary packages on their computer, should they elect to use their own computer.* ***The instructor is unable to answer any questions or issues related to software installation during the class.*** *If you need any assistance regarding software installation or issues, consult with the instructor during office hours."
+    "    * *Installation instructions on Docker and Docker image will be covered during the first class.*\n",
+    "    * *Students are expected to install all the necessary packages on their computer, should they elect to use their own computer.* ***The instructor is unable to answer any questions or issues related to software installation during the class.*** *If you need any assistance regarding software installation or issues, consult with the instructor during office hours.\n",
+    "    \n",
+    "  * **fMRIPrep**: A pipeline tool for fMRI data preprocessing. To ease installation, we will use a Docker image for fMRIPrep. Installation instructions will be covered during the class on fMRIPrep."
    ]
   },
   {
@@ -166,7 +169,7 @@
     "\n",
     "### Codes\n",
     "Some example codes used during the class, as well as some sample solutions for in-class\n",
-    "exercises and homework assignments, will be available on GitHub at [URL to be added].\n",
+    "exercises and homework assignments, will be available on GitHub at https://github.com/sathayas/fMRIClassFall2019.\n",
     "\n",
     "Students may clone the repository or download individual codes to be saved on their computer.\n",
     "Codes can also be viewed on a web browser. Codes are organized into folders for different\n",
@@ -370,6 +373,14 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">10/7</td> \n",
+    "        <td style=\"text-align:center;\">Processing pipeline</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">fMRIPrep</td>\n",
+    "        <td style=\"text-align:center;\">HW2 due</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">10/14</td> \n",
     "        <td style=\"text-align:center;\">Temporal modeling</td>\n",
     "        <td style=\"text-align:center;\">Chapter 5.1-5.2</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
@@ -377,7 +388,7 @@
     "        <td style=\"text-align:center;\">HW1 due</td>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <td style=\"text-align:center;\">10/14</td> \n",
+    "        <td style=\"text-align:center;\">10/21</td> \n",
     "        <td style=\"text-align:center;\">Group analysis</td>\n",
     "        <td style=\"text-align:center;\">Chapter 6</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
@@ -385,7 +396,7 @@
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <td style=\"text-align:center;\">10/21</td> \n",
+    "        <td style=\"text-align:center;\">10/28</td> \n",
     "        <td style=\"text-align:center;\">Statistical inference</td>\n",
     "        <td style=\"text-align:center;\">Chapter 7.1-7.3</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
@@ -393,20 +404,12 @@
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <td style=\"text-align:center;\">10/28</td> \n",
+    "        <td style=\"text-align:center;\">11/4</td> \n",
     "        <td style=\"text-align:center;\">Study design</td>\n",
     "        <td style=\"text-align:center;\">Chapter 5.3</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td style=\"text-align:center;\">11/4</td> \n",
-    "        <td style=\"text-align:center;\">Processing pipeline</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
-    "        <td style=\"text-align:center;\">TBD</td>\n",
-    "        <td style=\"text-align:center;\">fMRIPrep</td>\n",
-    "        <td style=\"text-align:center;\">HW2 due</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">11/11</td> \n",
@@ -418,7 +421,7 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">11/18</td> \n",
-    "        <td style=\"text-align:center;\">Searchlight</td>\n",
+    "        <td style=\"text-align:center;\">Searchlight/ RSA</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">Nilearn</td>\n",
@@ -426,7 +429,7 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">11/25</td> \n",
-    "        <td style=\"text-align:center;\">RSA</td>\n",
+    "        <td style=\"text-align:center;\">Resting-state fMRI</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">Nilearn</td>\n",
@@ -442,7 +445,7 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">12/9</td> \n",
-    "        <td style=\"text-align:center;\">MVPA</td>\n",
+    "        <td style=\"text-align:center;\">Cloud computing</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">Final project presentations</td>\n",
